improving visibility issue of letter

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -105,6 +105,8 @@ p{
 }
 
 #innerLetter {
+    height: auto;
+    background: #ffffff;
     width: 90%;
     margin: 0 auto;
     padding-bottom: 10vh;
